--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "js-cookie": "^3.0.5",
     "postman-collection": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
