--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "./prebuild.sh && vite build && ./postbuild.sh",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "./prebuild.sh && next build && ./postbuild.sh",
+    "start": "next start"
   },
   "dependencies": {
     "js-cookie": "^3.0.5",
+    "next": "^13.5.4",
     "postman-collection": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -20,10 +21,8 @@
     "@tailwindcss/forms": "^0.5.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.4",
-    "vite": "^4.0.0"
+    "tailwindcss": "^3.2.4"
   }
 }
