--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "^13.5.4",
     "postman-collection": "^4.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@headlessui/react": "^1.7.7",
