--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "postman-collection": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recoil": "^0.7.7",
-    "sysend": "^1.17.4"
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@headlessui/react": "^1.7.7",
