--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "./prebuild.sh && next build && ./postbuild.sh",
-    "start": "next start",
-    "prepare": "husky"
+    "start": "next start"
   },
   "dependencies": {
     "js-cookie": "^3.0.5",
@@ -21,6 +20,7 @@
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@tailwindcss/forms": "^0.5.3",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "autoprefixer": "^10.4.13",
