--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "./prebuild.sh && next build && ./postbuild.sh",
-    "start": "next start",
-    "prepare": "husky"
+    "start": "next start"
   },
   "dependencies": {
     "js-cookie": "^3.0.5",
@@ -21,11 +20,12 @@
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@tailwindcss/forms": "^0.5.3",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "autoprefixer": "^10.4.13",
     "husky": "^9.1.4",
-    "lint-staged": "^15.2.9",
+    "lint-staged": "^14.0.0",
     "postcss": "^8.4.20",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.2.4"
