--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "next": "^13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recoil": "^0.7.7"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@headlessui/react": "^1.7.7",
