--- a/package.json
+++ b/package.json
@@ -9,21 +9,28 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
+    "@serwist/next": "^9.0.15",
     "js-cookie": "^3.0.5",
-    "next": "^13.5.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^14.2.30",
+    "react": "18",
+    "react-dom": "18",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
-    "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@tailwindcss/forms": "^0.5.3",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.13",
+    "eslint-config-next": "^14.2.30",
     "postcss": "^8.4.20",
+    "serwist": "^9.0.15",
     "tailwindcss": "^3.2.4"
   },
-  "packageManager": "yarn@4.9.2"
+  "packageManager": "yarn@4.9.2",
+  "resolutions": {
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6"
+  }
 }
