--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "KDF Guaranteed Swap",
+    "name": "Atomic Swap from any Crypto to any Other",
     "short_name": "KDFGS",
     "icons": [
         {
