--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@heroicons/react": "^2.0.13",
     "@tailwindcss/forms": "^0.5.3",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^24.0.13",
     "@types/react": "^18",
     "@types/react-dom": "^18",
