--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "./prebuild.sh && next build && ./postbuild.sh",
+    "//build": "./prebuild.sh && next build && ./postbuild.sh",
+    "build": "next build",
     "start": "next start"
   },
   "dependencies": {
