--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
   "devDependencies": {
     "@heroicons/react": "^2.0.13",
     "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^24.0.13",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.13",
     "eslint-config-next": "^14.2.30",
     "postcss": "^8.4.20",
     "serwist": "^9.0.15",
-    "tailwindcss": "^3.2.4",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3"
   },
   "packageManager": "yarn@4.9.2",
